rocm_smi.h


typedef enum {
  RSMI_STATUS_SUCCESS = 0x0,             
  RSMI_STATUS_INVALID_ARGS,              
  RSMI_STATUS_NOT_SUPPORTED,             
  RSMI_STATUS_FILE_ERROR,                
  RSMI_STATUS_PERMISSION,                
  RSMI_STATUS_OUT_OF_RESOURCES,          
  RSMI_STATUS_INTERNAL_EXCEPTION,        
  RSMI_STATUS_INPUT_OUT_OF_BOUNDS,       
  RSMI_STATUS_INIT_ERROR,                
  RSMI_INITIALIZATION_ERROR = RSMI_STATUS_INIT_ERROR,
  RSMI_STATUS_NOT_YET_IMPLEMENTED,       
  RSMI_STATUS_NOT_FOUND,                 
  RSMI_STATUS_INSUFFICIENT_SIZE,         
  RSMI_STATUS_INTERRUPT,                 
  RSMI_STATUS_UNEXPECTED_SIZE,           
  RSMI_STATUS_NO_DATA,                   
  RSMI_STATUS_UNEXPECTED_DATA,           
  RSMI_STATUS_BUSY,                      
  RSMI_STATUS_REFCOUNT_OVERFLOW,         
  RSMI_STATUS_SETTING_UNAVAILABLE,       
  RSMI_STATUS_AMDGPU_RESTART_ERR,        
  RSMI_STATUS_UNKNOWN_ERROR = 0xFFFFFFFF,  
} rsmi_status_t;
typedef enum {
  RSMI_EVNT_GRP_XGMI = 0,         
  RSMI_EVNT_GRP_XGMI_DATA_OUT = 10,  
  RSMI_EVNT_GRP_INVALID = 0xFFFFFFFF
} rsmi_event_group_t;
typedef enum {
  RSMI_EVNT_FIRST = RSMI_EVNT_GRP_XGMI,
  RSMI_EVNT_XGMI_FIRST = RSMI_EVNT_GRP_XGMI,
  RSMI_EVNT_XGMI_0_NOP_TX = RSMI_EVNT_XGMI_FIRST,  
  RSMI_EVNT_XGMI_0_REQUEST_TX,                    
  RSMI_EVNT_XGMI_0_RESPONSE_TX,                   
  RSMI_EVNT_XGMI_0_BEATS_TX,
  RSMI_EVNT_XGMI_1_NOP_TX,                        
  RSMI_EVNT_XGMI_1_REQUEST_TX,                        
  RSMI_EVNT_XGMI_1_RESPONSE_TX,                   
  RSMI_EVNT_XGMI_1_BEATS_TX,                      
  RSMI_EVNT_XGMI_LAST = RSMI_EVNT_XGMI_1_BEATS_TX,   
  RSMI_EVNT_XGMI_DATA_OUT_FIRST = RSMI_EVNT_GRP_XGMI_DATA_OUT,  
  RSMI_EVNT_XGMI_DATA_OUT_0 = RSMI_EVNT_XGMI_DATA_OUT_FIRST,
  RSMI_EVNT_XGMI_DATA_OUT_1,   
  RSMI_EVNT_XGMI_DATA_OUT_2,   
  RSMI_EVNT_XGMI_DATA_OUT_3,   
  RSMI_EVNT_XGMI_DATA_OUT_4,   
  RSMI_EVNT_XGMI_DATA_OUT_5,   
  RSMI_EVNT_XGMI_DATA_OUT_LAST = RSMI_EVNT_XGMI_DATA_OUT_5,
  RSMI_EVNT_LAST = RSMI_EVNT_XGMI_DATA_OUT_LAST,
} rsmi_event_type_t;
typedef enum {
  RSMI_CLK_TYPE_SYS = 0x0,            
  RSMI_CLK_TYPE_FIRST = RSMI_CLK_TYPE_SYS,
  RSMI_CLK_TYPE_DF,                   
  RSMI_CLK_TYPE_DCEF,                 
  RSMI_CLK_TYPE_SOC,                  
  RSMI_CLK_TYPE_MEM,                  
  RSMI_CLK_TYPE_PCIE,                 
  RSMI_CLK_TYPE_LAST = RSMI_CLK_TYPE_MEM,
  RSMI_CLK_INVALID = 0xFFFFFFFF
} rsmi_clk_type_t;
typedef enum {
  RSMI_TEMP_CURRENT = 0x0,   
  RSMI_TEMP_FIRST = RSMI_TEMP_CURRENT,
  RSMI_TEMP_MAX,             
  RSMI_TEMP_MIN,             
  RSMI_TEMP_MAX_HYST,        
  RSMI_TEMP_MIN_HYST,        
  RSMI_TEMP_CRITICAL,        
  RSMI_TEMP_CRITICAL_HYST,   
  RSMI_TEMP_EMERGENCY,       
  RSMI_TEMP_EMERGENCY_HYST,  
  RSMI_TEMP_CRIT_MIN,        
  RSMI_TEMP_CRIT_MIN_HYST,   
  RSMI_TEMP_OFFSET,          
  RSMI_TEMP_LOWEST,          
  RSMI_TEMP_HIGHEST,         
  RSMI_TEMP_LAST = RSMI_TEMP_HIGHEST
} rsmi_temperature_metric_t;
typedef enum {
  RSMI_GPU_BLOCK_INVALID =   0x0000000000000000,  
  RSMI_GPU_BLOCK_FIRST =     0x0000000000000001,
  RSMI_GPU_BLOCK_UMC = RSMI_GPU_BLOCK_FIRST,      
  RSMI_GPU_BLOCK_SDMA =      0x0000000000000002,  
  RSMI_GPU_BLOCK_GFX =       0x0000000000000004,  
  RSMI_GPU_BLOCK_MMHUB =     0x0000000000000008,  
  RSMI_GPU_BLOCK_ATHUB =     0x0000000000000010,  
  RSMI_GPU_BLOCK_PCIE_BIF =  0x0000000000000020,  
  RSMI_GPU_BLOCK_HDP =       0x0000000000000040,  
  RSMI_GPU_BLOCK_XGMI_WAFL = 0x0000000000000080,  
  RSMI_GPU_BLOCK_DF =        0x0000000000000100,  
  RSMI_GPU_BLOCK_SMN =       0x0000000000000200,  
  RSMI_GPU_BLOCK_SEM =       0x0000000000000400,  
  RSMI_GPU_BLOCK_MP0 =       0x0000000000000800,  
  RSMI_GPU_BLOCK_MP1 =       0x0000000000001000,  
  RSMI_GPU_BLOCK_FUSE =      0x0000000000002000,  
  RSMI_GPU_BLOCK_LAST = RSMI_GPU_BLOCK_FUSE,       
  RSMI_GPU_BLOCK_RESERVED =  0x8000000000000000
} rsmi_gpu_block_t;
typedef enum {
  RSMI_MEM_TYPE_FIRST = 0,
  RSMI_MEM_TYPE_VRAM = RSMI_MEM_TYPE_FIRST,  
  RSMI_MEM_TYPE_VIS_VRAM,                    
  RSMI_MEM_TYPE_GTT,                         
  RSMI_MEM_TYPE_LAST = RSMI_MEM_TYPE_GTT
} rsmi_memory_type_t;
typedef enum {
  RSMI_FW_BLOCK_FIRST = 0,
  RSMI_FW_BLOCK_ASD = RSMI_FW_BLOCK_FIRST,
  RSMI_FW_BLOCK_CE,
  RSMI_FW_BLOCK_DMCU,
  RSMI_FW_BLOCK_MC,
  RSMI_FW_BLOCK_ME,
  RSMI_FW_BLOCK_MEC,
  RSMI_FW_BLOCK_MEC2,
  RSMI_FW_BLOCK_MES,
  RSMI_FW_BLOCK_MES_KIQ,
  RSMI_FW_BLOCK_PFP,
  RSMI_FW_BLOCK_RLC,
  RSMI_FW_BLOCK_RLC_SRLC,
  RSMI_FW_BLOCK_RLC_SRLG,
  RSMI_FW_BLOCK_RLC_SRLS,
  RSMI_FW_BLOCK_SDMA,
  RSMI_FW_BLOCK_SDMA2,
  RSMI_FW_BLOCK_SMC,
  RSMI_FW_BLOCK_SOS,
  RSMI_FW_BLOCK_TA_RAS,
  RSMI_FW_BLOCK_TA_XGMI,
  RSMI_FW_BLOCK_UVD,
  RSMI_FW_BLOCK_VCE,
  RSMI_FW_BLOCK_VCN,
  RSMI_FW_BLOCK_LAST = RSMI_FW_BLOCK_VCN
} rsmi_fw_block_t;
typedef union id {
        uint64_t id;           
        const char *name;      
        union {
            rsmi_memory_type_t memory_type;
            rsmi_temperature_metric_t temp_metric;
            rsmi_event_type_t evnt_type;
            rsmi_event_group_t evnt_group;
            rsmi_clk_type_t clk_type;
            rsmi_fw_block_t fw_block;
            rsmi_gpu_block_t gpu_block_type;
        };
} rsmi_func_id_value_t;
rsmi_status_t rsmi_num_monitor_devices(uint32_t *num_devices);
rsmi_status_t rsmi_dev_id_get(uint32_t dv_ind, uint16_t *id);
rsmi_status_t rsmi_dev_vendor_id_get(uint32_t dv_ind, uint16_t *id);
rsmi_status_t rsmi_dev_name_get(uint32_t dv_ind, char *name, size_t len);
rsmi_status_t rsmi_dev_brand_get(uint32_t dv_ind, char *brand, uint32_t len);
rsmi_status_t rsmi_dev_vendor_name_get(uint32_t dv_ind, char *name,
                                                                  size_t len);
rsmi_status_t rsmi_dev_vram_vendor_get(uint32_t dv_ind, char *brand,
                                                                uint32_t len);
rsmi_status_t rsmi_dev_serial_number_get(uint32_t dv_ind,
                                              char *serial_num, uint32_t len);
rsmi_status_t rsmi_dev_subsystem_id_get(uint32_t dv_ind, uint16_t *id);
rsmi_status_t
rsmi_dev_subsystem_name_get(uint32_t dv_ind, char *name, size_t len);
rsmi_status_t
rsmi_dev_drm_render_minor_get(uint32_t dv_ind, uint32_t *minor);
rsmi_status_t rsmi_dev_subsystem_vendor_id_get(uint32_t dv_ind, uint16_t *id);
rsmi_status_t rsmi_dev_unique_id_get(uint32_t dv_ind, uint64_t *id);